<resources>
    <string name="app_name">Fly IoT Demo</string>
    <string name="loading">加载中…</string>
    <string name="splash_loading">正在检查登录状态…</string>
    <string name="auth_title">账号登录</string>
    <string name="profile_title">个人中心</string>
    <string name="convert_account_title">游客转正</string>
    <string name="auth_entry_hint">选择一种方式进入应用</string>
    <string name="country_code">国家码</string>
    <string name="phone_number">手机号</string>
    <string name="email_address">邮箱地址</string>
    <string name="password">密码</string>
    <string name="verify_code">验证码</string>
    <string name="nickname">昵称</string>
    <string name="send_code">发送验证码</string>
    <string name="submit">提交</string>
    <string name="back">返回</string>
    <string name="phone_auth">手机号账号</string>
    <string name="email_auth">邮箱账号</string>
    <string name="tourist_login">游客体验</string>
    <string name="mode_register">注册</string>
    <string name="mode_password_login">密码登录</string>
    <string name="mode_code_login">验证码登录</string>
    <string name="mode_reset_password">找回密码</string>
    <string name="phone_auth_title">手机号账号</string>
    <string name="email_auth_title">邮箱账号</string>
    <string name="profile_current_user">当前用户</string>
    <string name="profile_display_name">显示名</string>
    <string name="profile_account">账号</string>
    <string name="profile_uid">UID</string>
    <string name="profile_sid">Session ID</string>
    <string name="profile_refresh">刷新用户信息</string>
    <string name="profile_update_nickname">更新昵称</string>
    <string name="profile_logout">退出登录</string>
    <string name="profile_tourist_logout">游客退出</string>
    <string name="profile_cancel_account">注销账号</string>
    <string name="profile_convert_account">绑定手机号或邮箱，完成正式注册</string>
    <string name="profile_guest_hint">当前是游客账号。绑定手机号或邮箱后可转为正式账号。</string>
    <string name="profile_not_logged_in">未登录</string>
    <string name="convert_mode_phone">绑定手机号</string>
    <string name="convert_mode_email">绑定邮箱</string>
    <string name="convert_target_account">目标账号</string>
    <string name="convert_password_hint">设置新密码</string>
    <string name="message_code_sent">验证码已发送</string>
    <string name="message_register_success">注册成功</string>
    <string name="message_login_success">登录成功</string>
    <string name="message_password_reset_success">密码已重置，请重新登录</string>
    <string name="message_tourist_login_success">游客登录成功</string>
    <string name="message_refresh_success">用户信息已刷新</string>
    <string name="message_nickname_updated">昵称已更新</string>
    <string name="message_logout_success">已退出登录</string>
    <string name="message_cancel_account_success">注销请求已提交</string>
    <string name="message_convert_account_success">账号绑定成功</string>
    <string name="message_country_code_required">请输入国家码</string>
    <string name="message_phone_required">请输入手机号</string>
    <string name="message_email_required">请输入邮箱地址</string>
    <string name="message_password_required">请输入密码</string>
    <string name="message_code_required">请输入验证码</string>
    <string name="message_nickname_required">请输入昵称</string>
    <string name="message_auth_code_not_needed">当前模式无需验证码</string>
    <string name="message_session_expired">登录会话已失效，请重新登录</string>
    <string name="cancel_account_confirm_title">确认注销账号</string>
    <string name="cancel_account_confirm_message">账号注销请求提交后，一周后才会永久删除。在此之前重新登录会取消注销请求。</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="tab_home">首页</string>
    <string name="tab_profile">我的</string>
    <string name="home_placeholder">首页（开发中）</string>
    <string name="home_add_device">添加设备</string>
    <string name="profile_family_manage">家庭管理</string>

    <string name="home_switch_title">选择家庭</string>
    <string name="home_switch_empty">暂无家庭</string>
    <string name="home_switch_selected">当前选中</string>
    <string name="home_event_added">新家庭已添加</string>
    <string name="home_invite_title">家庭邀请</string>
    <string name="home_invite_message">您收到加入家庭「%s」的邀请</string>
    <string name="home_invite_accept">接受</string>
    <string name="home_invite_reject">拒绝</string>
    <string name="home_invite_accepted">已接受邀请，已切换到新家庭</string>
    <string name="home_invite_rejected">已拒绝邀请</string>
    <string name="home_removed_title">家庭已移除</string>
    <string name="home_removed_current_message">您当前所在的家庭已被移除，将为您切换到其他家庭。</string>
    <string name="home_removed_other_message">一个家庭已从您的列表中移除</string>

    <string name="device_online">在线</string>
    <string name="device_offline">离线</string>
    <string name="device_shared_badge">共享</string>
    <string name="device_section_home">我的设备</string>
    <string name="device_section_shared">共享设备</string>
    <string name="device_empty_title">暂无设备</string>
    <string name="device_empty_subtitle">点击右上角 + 添加设备</string>
    <string name="device_remove_title">移除设备</string>
    <string name="device_remove_message">确定要移除设备「%s」吗？此操作不可撤销。</string>
    <string name="device_remove_shared_title">取消共享</string>
    <string name="device_remove_shared_message">确定取消接收「%s」的共享？</string>
    <string name="device_remove_success">设备已移除</string>
    <string name="device_remove_failed">移除失败</string>
    <string name="device_rename_title">修改设备名称</string>
    <string name="device_rename_hint">请输入新名称</string>
    <string name="device_rename_success">名称已修改</string>
    <string name="device_rename_failed">修改失败</string>
    <string name="device_shared_info_title">共享设备信息</string>
    <string name="device_shared_info_message">设备名称：%s\n状态：%s</string>
    <string name="panel_service_unavailable">面板服务不可用，请检查 BizBundle 初始化</string>
</resources>
